[gd_scene load_steps=23 format=3 uid="uid://col4ncuar707o"]

[ext_resource type="PackedScene" uid="uid://7x22732qu3vm" path="res://Scenes/sten.tscn" id="1_cuqhi"]
[ext_resource type="Script" path="res://Scripts/battle_scene_manager.gd" id="2_isg24"]
[ext_resource type="Script" path="res://Scripts/battle_manager.gd" id="3_42q7k"]
[ext_resource type="Theme" uid="uid://cs64m8jorbkrh" path="res://Assets/themes/button big_theme.tres" id="4_8niwj"]
[ext_resource type="FontFile" uid="uid://donxec21iqi2o" path="res://Assets/fonts/PixelOperator8.ttf" id="5_tjrnk"]
[ext_resource type="FontFile" uid="uid://d2voppd6fmkh6" path="res://Assets/fonts/PixelOperator8-Bold.ttf" id="6_ounae"]
[ext_resource type="FontFile" uid="uid://cxpul0hcnrfyt" path="res://Assets/fonts/PixelDigivolve-mOm9.ttf" id="7_vemiv"]
[ext_resource type="Script" path="res://Scripts/input_manager.gd" id="8_rf5mg"]
[ext_resource type="Script" path="res://Scripts/card_manager.gd" id="9_0qvbw"]
[ext_resource type="PackedScene" uid="uid://dlf5nf8ot7glp" path="res://Scenes/spell_deck.tscn" id="10_imebb"]
[ext_resource type="PackedScene" uid="uid://cq8q8qchwy526" path="res://Scenes/deck.tscn" id="11_eeh37"]
[ext_resource type="Script" path="res://Scripts/deck.gd" id="12_5vomw"]
[ext_resource type="PackedScene" uid="uid://bco7eddmnqek" path="res://Scenes/discard_pile.tscn" id="13_3rrsm"]
[ext_resource type="PackedScene" uid="uid://dev8m08gchsr4" path="res://Scenes/card_slot.tscn" id="14_wbgrc"]
[ext_resource type="PackedScene" uid="uid://daa4mye5x3rm5" path="res://Scenes/tiles_folder.tscn" id="15_uykei"]
[ext_resource type="PackedScene" uid="uid://4gv81wu465g1" path="res://Scenes/card_collection.tscn" id="16_x00fb"]
[ext_resource type="Texture2D" uid="uid://cynmlvwhdo84o" path="res://Assets/images/Square.png" id="17_xvkue"]
[ext_resource type="Texture2D" uid="uid://mhucvphj4i4e" path="res://Assets/images/Square2.png" id="18_xlo24"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cy588"]
size = Vector2(1919, 758.5)

[sub_resource type="Animation" id="Animation_u2blv"]
resource_name = "Mult_display"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:theme_override_font_sizes/font_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [80, 96, 64]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:theme_override_colors/font_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 0.16, 0.16, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.174533, 0.0, -0.174533, 0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:theme_override_colors/font_outline_color")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.366667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_sfo12"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:theme_override_font_sizes/font_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [96]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:theme_override_colors/font_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0893737]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:theme_override_colors/font_outline_color")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_novl0"]
_data = {
"Mult_display": SubResource("Animation_u2blv"),
"RESET": SubResource("Animation_sfo12")
}

[node name="BattleScene" type="Node2D"]

[node name="sten" parent="." instance=ExtResource("1_cuqhi")]
position = Vector2(960, -24)

[node name="SceneManager" type="Node2D" parent="."]
script = ExtResource("2_isg24")

[node name="Timer" type="Timer" parent="SceneManager"]
wait_time = 0.05
one_shot = true

[node name="PauseTimer" type="Timer" parent="SceneManager"]
one_shot = true

[node name="BattleManager" type="Node2D" parent="."]
script = ExtResource("3_42q7k")

[node name="EndTurn" type="Button" parent="BattleManager"]
self_modulate = Color(0.207843, 0.207843, 0.207843, 1)
offset_left = 56.0
offset_top = 504.0
offset_right = 264.0
offset_bottom = 629.0
focus_mode = 0
theme = ExtResource("4_8niwj")
theme_override_fonts/font = ExtResource("5_tjrnk")
theme_override_font_sizes/font_size = 24
keep_pressed_outside = true

[node name="EndTurnLabel" type="Label" parent="BattleManager/EndTurn"]
layout_mode = 0
offset_right = 208.0
offset_bottom = 126.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("6_ounae")
theme_override_font_sizes/font_size = 24
text = "End turn"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AttackTimer" type="Timer" parent="BattleManager"]

[node name="TotalDamage" type="Label" parent="BattleManager"]
offset_left = 1344.0
offset_top = 64.0
offset_right = 1888.0
offset_bottom = 192.0
theme_override_fonts/font = ExtResource("5_tjrnk")
theme_override_font_sizes/font_size = 64
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TurnCounter" type="Label" parent="BattleManager"]
offset_left = 56.0
offset_top = 645.0
offset_right = 264.0
offset_bottom = 676.0
theme_override_fonts/font = ExtResource("5_tjrnk")
theme_override_font_sizes/font_size = 24
text = "Turn: 1/3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DarkenBackground" type="ColorRect" parent="BattleManager"]
z_index = 50
offset_right = 1920.0
offset_bottom = 1080.0
mouse_filter = 2
color = Color(0, 0, 0, 0)

[node name="HandInfo" type="Label" parent="BattleManager"]
offset_left = 584.0
offset_top = 352.0
offset_right = 1336.0
offset_bottom = 439.0
theme_override_fonts/font = ExtResource("7_vemiv")
theme_override_font_sizes/font_size = 32
text = "Select card"
horizontal_alignment = 1
vertical_alignment = 1
visible_characters = 0
visible_ratio = 0.0

[node name="InputManager" type="Node2D" parent="."]
script = ExtResource("8_rf5mg")

[node name="CardManager" type="Node2D" parent="."]
script = ExtResource("9_0qvbw")

[node name="HandCounter" type="Label" parent="CardManager"]
offset_left = 768.0
offset_top = 1026.0
offset_right = 1152.0
offset_bottom = 1074.0
theme_override_fonts/font = ExtResource("5_tjrnk")
theme_override_font_sizes/font_size = 24
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SpellDeck" parent="." instance=ExtResource("10_imebb")]
position = Vector2(1784, 928)

[node name="SpellDeckCounter" type="Label" parent="SpellDeck"]
visible = false
offset_left = -24.0
offset_top = 32.0
offset_right = 24.0
offset_bottom = 48.0
theme_override_fonts/font = ExtResource("5_tjrnk")
theme_override_font_sizes/font_size = 8
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TroopDeck" parent="." instance=ExtResource("11_eeh37")]
position = Vector2(136, 928)
script = ExtResource("12_5vomw")

[node name="TroopDeckCounter" type="Label" parent="TroopDeck"]
visible = false
offset_left = -24.0
offset_top = 32.0
offset_right = 24.0
offset_bottom = 48.0
theme_override_fonts/font = ExtResource("5_tjrnk")
theme_override_font_sizes/font_size = 8
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DrawAnimation" type="Timer" parent="TroopDeck"]
wait_time = 0.2

[node name="DiscardPile" parent="." instance=ExtResource("13_3rrsm")]
position = Vector2(1784, 597)

[node name="DiscardCounter" type="Label" parent="DiscardPile"]
offset_left = -24.0
offset_top = 32.0
offset_right = 24.0
offset_bottom = 48.0
theme_override_fonts/font = ExtResource("5_tjrnk")
theme_override_font_sizes/font_size = 8
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CardBar" type="Node2D" parent="."]

[node name="HandSlot2" type="ColorRect" parent="CardBar"]
z_index = -3
offset_left = 312.0
offset_top = 816.0
offset_right = 1608.0
offset_bottom = 1064.0
mouse_filter = 2
color = Color(0.18359, 0.18359, 0.18359, 1)

[node name="HandSlot" type="ColorRect" parent="CardBar/HandSlot2"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 1288.0
offset_bottom = 216.0
mouse_filter = 2
color = Color(0.106237, 0.106237, 0.106237, 1)

[node name="SortButton" type="Button" parent="CardBar/HandSlot2/HandSlot"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -88.0
offset_top = -40.0
offset_right = 88.0
grow_horizontal = 2
focus_mode = 0
theme = ExtResource("4_8niwj")
keep_pressed_outside = true

[node name="Label" type="Label" parent="CardBar/HandSlot2/HandSlot/SortButton"]
self_modulate = Color(0.162066, 0.162066, 0.162066, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("6_ounae")
theme_override_font_sizes/font_size = 24
text = "Sort"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ColorRect2" type="ColorRect" parent="CardBar"]
offset_left = 16.0
offset_top = 760.0
offset_right = 1904.0
offset_bottom = 776.0
mouse_filter = 2
color = Color(0.674815, 0.674815, 0.674815, 1)

[node name="CardSlots" type="Node2D" parent="."]

[node name="CardSlot1" parent="CardSlots" instance=ExtResource("14_wbgrc")]
position = Vector2(424, 597)

[node name="CardSlot2" parent="CardSlots" instance=ExtResource("14_wbgrc")]
position = Vector2(696, 597)

[node name="CardSlot3" parent="CardSlots" instance=ExtResource("14_wbgrc")]
position = Vector2(960, 597)

[node name="CardSlot4" parent="CardSlots" instance=ExtResource("14_wbgrc")]
position = Vector2(1224, 597)

[node name="CardSlot5" parent="CardSlots" instance=ExtResource("14_wbgrc")]
position = Vector2(1496, 597)

[node name="SpellPlayArea" type="Area2D" parent="."]
collision_layer = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpellPlayArea"]
visible = false
position = Vector2(960.5, 380.75)
shape = SubResource("RectangleShape2D_cy588")

[node name="Round Box" type="ColorRect" parent="."]
z_index = 1
offset_left = 32.0
offset_right = 288.0
offset_bottom = 104.0
color = Color(0.184314, 0.184314, 0.184314, 1)

[node name="ColorRect" type="ColorRect" parent="Round Box"]
layout_mode = 0
offset_left = 8.0
offset_right = 248.0
offset_bottom = 96.0
color = Color(0.105882, 0.105882, 0.105882, 1)

[node name="ColorRect" type="ColorRect" parent="Round Box/ColorRect"]
layout_mode = 0
offset_left = 8.0
offset_top = 16.0
offset_right = 232.0
offset_bottom = 88.0
color = Color(0.00392157, 0.00392157, 0.00392157, 1)

[node name="RoundLabel" type="Label" parent="Round Box/ColorRect/ColorRect"]
layout_mode = 0
offset_left = 16.0
offset_right = 224.0
offset_bottom = 72.0
theme_override_fonts/font = ExtResource("6_ounae")
theme_override_font_sizes/font_size = 24
text = "Round: "
vertical_alignment = 1

[node name="Money Box" type="ColorRect" parent="Round Box"]
layout_mode = 0
offset_top = 120.0
offset_right = 256.0
offset_bottom = 264.0
color = Color(0.184314, 0.184314, 0.184314, 1)

[node name="ColorRect" type="ColorRect" parent="Round Box/Money Box"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 248.0
offset_bottom = 136.0
color = Color(0.105882, 0.105882, 0.105882, 1)

[node name="ColorRect" type="ColorRect" parent="Round Box/Money Box/ColorRect"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 232.0
offset_bottom = 120.0
color = Color(0.00392157, 0.00392157, 0.00392157, 1)

[node name="Label" type="Label" parent="Round Box/Money Box/ColorRect/ColorRect"]
layout_mode = 0
offset_right = 224.0
offset_bottom = 56.0
theme_override_fonts/font = ExtResource("6_ounae")
theme_override_font_sizes/font_size = 24
text = "Money:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MoneyLabel" type="Label" parent="Round Box/Money Box/ColorRect/ColorRect"]
layout_mode = 0
offset_top = 56.0
offset_right = 224.0
offset_bottom = 112.0
theme_override_fonts/font = ExtResource("6_ounae")
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1
vertical_alignment = 1

[node name="TilesFolder" parent="." instance=ExtResource("15_uykei")]
position = Vector2(960, -172)

[node name="CardCollection" parent="." instance=ExtResource("16_x00fb")]
z_index = 100
position = Vector2(0, 1080)

[node name="BackButton" type="Button" parent="CardCollection"]
self_modulate = Color(0.253238, 0.253238, 0.253238, 1)
offset_left = 64.0
offset_top = 936.0
offset_right = 288.0
offset_bottom = 1056.0
focus_mode = 0
theme = ExtResource("4_8niwj")
keep_pressed_outside = true

[node name="BackLabel" type="Label" parent="CardCollection/BackButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("6_ounae")
theme_override_font_sizes/font_size = 32
text = "Back"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DebuffIcons" type="VBoxContainer" parent="."]
offset_left = 320.0
offset_top = 64.0
offset_right = 336.0
offset_bottom = 149.0
scale = Vector2(3, 3)

[node name="DebuffText" type="VBoxContainer" parent="."]
offset_left = 376.0
offset_top = 72.0
offset_right = 468.0
offset_bottom = 320.0
theme_override_constants/separation = 28

[node name="MultiplierDisplay" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 736.0
offset_top = 64.0
offset_right = 1184.0
offset_bottom = 160.0
grow_horizontal = 2
rotation = 0.0893737
pivot_offset = Vector2(224, 48)
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 1, 0)
theme_override_colors/font_outline_color = Color(0, 0, 0, 0)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("6_ounae")
theme_override_font_sizes/font_size = 96
text = "x2"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="MultiplierDisplay"]
libraries = {
"": SubResource("AnimationLibrary_novl0")
}

[node name="NewQuota" type="Label" parent="."]
z_index = 1001
offset_left = 664.0
offset_top = 248.0
offset_right = 1258.0
offset_bottom = 320.0
theme_override_fonts/font = ExtResource("5_tjrnk")
theme_override_font_sizes/font_size = 72
text = "New Quota:"
visible_characters = 0
visible_ratio = 0.0

[node name="Quota" type="NinePatchRect" parent="."]
self_modulate = Color(0.289741, 0.289741, 0.289741, 1)
offset_left = 1456.0
offset_top = 236.0
offset_right = 1776.0
offset_bottom = 340.0
pivot_offset = Vector2(160, 52)
texture = ExtResource("17_xvkue")
region_rect = Rect2(0, 0, 64, 64)
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16

[node name="Quota" type="NinePatchRect" parent="Quota"]
self_modulate = Color(0.176419, 0.176419, 0.176419, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 40.0
offset_right = -8.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("18_xlo24")
region_rect = Rect2(0, 0, 64, 64)
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16

[node name="Label" type="Label" parent="Quota/Quota"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.071
anchor_right = 1.0
anchor_bottom = 0.917
offset_top = -0.408
offset_bottom = 7.984
pivot_offset = Vector2(152, 25)
theme_override_fonts/font = ExtResource("5_tjrnk")
theme_override_font_sizes/font_size = 24
text = "40000000000"
horizontal_alignment = 1
vertical_alignment = 1
visible_characters = 0
visible_ratio = 0.0

[node name="Label" type="Label" parent="Quota"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
offset_bottom = 40.0
theme_override_fonts/font = ExtResource("6_ounae")
theme_override_font_sizes/font_size = 24
text = "Quota"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="timeout" from="SceneManager/Timer" to="SceneManager" method="_on_timer_timeout"]
[connection signal="button_down" from="BattleManager/EndTurn" to="BattleManager" method="_on_end_turn_button_down"]
[connection signal="button_up" from="BattleManager/EndTurn" to="BattleManager" method="_on_end_turn_button_up"]
[connection signal="pressed" from="BattleManager/EndTurn" to="BattleManager" method="_on_end_turn_pressed"]
[connection signal="timeout" from="BattleManager/AttackTimer" to="BattleManager" method="_on_attack_timer_timeout"]
[connection signal="timeout" from="TroopDeck/DrawAnimation" to="TroopDeck" method="_on_draw_animation_timeout"]
[connection signal="button_down" from="CardBar/HandSlot2/HandSlot/SortButton" to="CardManager" method="_on_sort_button_button_down"]
[connection signal="button_up" from="CardBar/HandSlot2/HandSlot/SortButton" to="CardManager" method="_on_sort_button_button_up"]
[connection signal="pressed" from="CardBar/HandSlot2/HandSlot/SortButton" to="CardManager" method="_on_sort_button_pressed"]
[connection signal="button_down" from="CardCollection/BackButton" to="CardManager" method="_on_back_button_button_down"]
[connection signal="button_up" from="CardCollection/BackButton" to="CardManager" method="_on_back_button_button_up"]
[connection signal="pressed" from="CardCollection/BackButton" to="CardManager" method="_on_back_button_pressed"]
